# projectmgr

./: README.md
tactix_api/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
tactix_api/alembic/: env.py
tactix_api/app/: main.py
tactix_api/app/api/: deps.py
tactix_api/app/api/routes/: __init__.py  auth.py  projects.py  tasks.py  users.py  workspaces.py
tactix_api/app/core/: config.py
tactix_api/app/models/: __init__.py  project.py  task.py  user.py  workspace.py
tactix_api/app/schemas/: __init__.py  project.py  task.py  user.py  workspace.py
tactix_api/app/services/: project_service.py  task_service.py  user_service.py  workspace_service.py
tactix_api/app/utils/: helpers.py
tactix_api/tests/: conftest.py  test_main.py
